--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <i class="fas fa-circle"></i>
                 <i class="fas fa-circle"></i>
             </div>
-
         </div>
-
+        <button id="play">Avvia</button>
+        <button id="pause">Stop</button>
     </div>
     <script src="main.js" charset="utf-8"></script>
     </body>
