--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
                 <i class="fas fa-circle"></i>
             </div>
         </div>
-        <button id="play">Avvia</button>
-        <button id="pause">Stop</button>
+        <div class="button">
+            <button id="play">Avvia</button>
+            <button id="pause">Stop</button>
+        </div>
     </div>
     <script src="main.js" charset="utf-8"></script>
     </body>
